# paprika-mcp

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/paprika_mcp/: __init__.py  client.py  server.py
tests/: test_create_recipe.py  test_create_recipe_photo.py
